added some responsiveness

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <h1>WORK EXPERIENCE</h1>
 
         <div class="workPlace">
-          <h3>SHOPRITE (Bluedowns)</h3>
+          <h3>1. SHOPRITE (Bluedowns)</h3>
   
           <p>
               Shelf Packer
@@ -188,7 +188,7 @@
   
         <div class="workPlace">
   
-          <h3>Burger King (Somerset)</h3>
+          <h3>2. Burger King (Somerset)</h3>
   
           <p>
               General worker
