--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
         <p>
           Web Development (6 months full-time course) 
-          <button>Subjects</button>
+          <p><button>Subjects</button></p>
+          
         </p>
         <p>2018</p>  
 
